# reward_hacking_env_playing_around

./: .gitignore  CLAUDE.md  CLEANRL_MIGRATION.md  CODING.md  README.md  pyproject.toml  requirements.txt  resources  run.sh  train_custom_reward.py
.github/: copilot-instructions.md
bgp/: setup.py
flow_reward_misspecification/: setup.py
models/: default_policy.py  glucose_policy.py
occupancy_measures/: __init__.py
reward_functions/: glucose_gt_rew_fns.py  pandemic_gt_rew_fns.py  traffic_gt_rew_fns.py
rl_utils/: collect_trajectories.py  env_setups.py  reward_wrapper.py  train_with_custom_rew.py
rollout_policies_slurm_scripts/: rollout_bc_pol.sh  rollout_gt_trained_pol.sh  rollout_proxy_trained_pol.sh  test.sh
run_logs/: pandemic_rew_learning_stream.txt  slurmjob_12965492.err  slurmjob_12965504.err  slurmjob_12970136.err  slurmjob_12970137.err  slurmjob_12970175.err  slurmjob_12970182.err  slurmjob_12970194.err  slurmjob_12970216.err  slurmjob_12970268.err  slurmjob_12970341.err  slurmjob_12970515.err  slurmjob_12970518.err  slurmjob_12970530.err  slurmjob_12970544.err  slurmjob_12970553.err  slurmjob_12970554.err  slurmjob_12981790.err  slurmjob_12981885.err  slurmjob_12981887.err  slurmjob_12981888.err
test_slurm_scripts/: test_glucose_proxy.sh  test_glucose_true.sh  test_new_pandemic.sh  test_pandemic_proxy.sh  test_pandemic_true.sh  test_traffic_true.sh
utils/: action_distributions.py  glucose_action_dist.py  glucose_config.py  glucose_models.py  logging_utils.py  pandemic_config.py  pandemic_rollout_and_save.py  traffic_config.py  (+1 more)
(+17 files in other folders)
